--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -652,11 +652,20 @@ footer {
     margin: 0 auto 30px auto;
     overflow: hidden;
     background: #fff;
-    border-radius: 4px;
+    border-radius: 10px;
 }
 
 .project-image {
     float: left;
+    height: 300px;
+    line-height: 300px;
+    text-align: center;
+    padding: 10px;
+
+    img {
+        width: 260px;
+        max-height: 280px;
+    }
 }
 
 .project-info {
@@ -665,9 +674,10 @@ footer {
     transform: translateY(-50%);
     margin-left: 300px;
     padding: 15px;
+    width: calc(100% - 300px);
 
     h3 {
-        font-size: 1.5em;
+        font-size: 1em;
         font-weight: 300;
         color: $heading;
         margin: 0 0 15px 0;
@@ -973,6 +983,7 @@ footer {
         padding: 30px 15px;
         top: auto;
         transform: none;
+        width: 100%;
     }
 
     footer {
