--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -99,7 +99,7 @@ body {
 // No JS styles
 .no-js {
     #experience-timeline {
-        > div {
+        >div {
             background: $background;
             padding: 10px;
             margin-bottom: 10px;
@@ -127,19 +127,21 @@ body {
             }
         }
 
-        &:before, &:after {
+        &:before,
+        &:after {
             content: none;
         }
     }
 }
 
 @keyframes dropHeader {
-  0% {
-    transform: translateY(-100%);
-  }
-  100% {
-    transform: translateY(0);
-  }
+    0% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
 }
 
 header {
@@ -261,7 +263,7 @@ footer {
         height: 35px;
         border-radius: 50%;
         border: 3px solid lighten($text, 25%);
-        text-align:center;
+        text-align: center;
     }
 
     i {
@@ -310,11 +312,11 @@ footer {
 }
 
 .shadow {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .shadow-large {
-    box-shadow: 0 3px 6px rgba(0,0,0,0.08), 0 3px 6px rgba(0,0,0,0.15);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
 }
 
 .heading {
@@ -352,7 +354,7 @@ footer {
     height: 100vh;
     min-height: 500px;
     max-height: 1080px;
-    background: url(../images/lead-bg5.jpg);
+    background: url(../images/background-img.jpg);
     background-size: cover;
     padding: 15px;
     overflow: hidden;
@@ -366,7 +368,8 @@ footer {
     transform: translate(-50%, -50%);
     text-align: center;
 
-    h1, h2 {
+    h1,
+    h2 {
         margin: 0;
     }
 
@@ -417,13 +420,14 @@ footer {
         height: 35px;
         border-radius: 50%;
         border: 3px solid lighten($base-color, 25%);
-        text-align:center;
+        text-align: center;
     }
 
     i {
         animation: pulsate 1.5s ease;
         animation-iteration-count: infinite;
-        padding-top: 5px;;
+        padding-top: 5px;
+        ;
     }
 }
 
@@ -618,7 +622,8 @@ footer {
         margin: 0 0 15px 0;
     }
 
-    p, ul {
+    p,
+    ul {
         margin: 0;
         color: $text;
         font-size: 0.9em;
@@ -718,23 +723,66 @@ footer {
         margin-bottom: 50px;
     }
 
-    ul {
-        display: block;
-        margin: 0 auto;
-        padding: 0;
-        max-width: 800px;
+    .skill_img_container {
+        text-align: center;
+        display: inline-block;
+        width: 114px;
+        height: 116px;
+        border-radius: 30px 30px;
+        background-size: 114px;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-right: 2rem;
+        margin-bottom: 2rem;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, .2), 0 3px 6px rgba(0, 0, 0, .2);
+
+        span {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: #000;
+            border-radius: 30px 30px;
+            height: 100%;
+            padding: 10px;
+            opacity: 0.8;
+            font-weight: 400;
+            color: #fff;
+            visibility: hidden;
+        }
+
+        &:hover span {
+            visibility: visible;
+        }
     }
 
-    li {
-        display: inline-block;
-        margin: 7px;
-        padding: 5px 10px;
-        color: $heading;
-        background: darken($background-alt, 5%);
-        list-style: none;
-        cursor: default;
-        font-size: 1.2em;
+    #skill_img1 {
+        background-image: url('../images/html-logo.png');
     }
+
+    #skill_img2 {
+        background-image: url('../images/css-logo.png');
+    }
+
+    #skill_img3 {
+        background-image: url('../images/javascript-logo.png');
+    }
+
+    #skill_img4 {
+        background-image: url('../images/typescript-logo.png');
+    }
+
+    #skill_img5 {
+        background-image: url('../images/sass-logo.png');
+    }
+
+    #skill_img6 {
+        background-image: url('../images/vue-logo.png');
+    }
+
+    #skill_img7 {
+        background-image: url('../images/git-logo.png');
+    }
+
 }
 
 /*
@@ -753,13 +801,42 @@ footer {
         color: #fff;
         font-weight: 500;
     }
+
+    .email_txt {
+        color: #8e6c87;
+        margin-right: 10px;
+        font-size: 1.8rem;
+    }
+
+    ul {
+        margin: 5px 0 0 0;
+        padding: 0;
+    }
+
+    li {
+        display: inline-block;
+        font-size: 1.8em;
+        list-style: none;
+        margin-right: 10px;
+    }
+
+    a {
+        display: block;
+        color: $text;
+        padding: 10px;
+
+        &:hover {
+            color: $base-color;
+        }
+    }
 }
 
 #contact-form {
     max-width: 500px;
     margin: 0 auto;
 
-    input, textarea {
+    input,
+    textarea {
         display: block;
         width: 100%;
         padding: 10px;
@@ -769,6 +846,7 @@ footer {
         background: darken($base-color, 15%);
         color: #fff;
         @include transition();
+
         @include placeholder {
             color: #fff;
         }
@@ -793,11 +871,11 @@ footer {
         border: none;
         color: $base-color;
         font-weight: 700;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         @include transition();
 
         &:hover {
-            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
         }
     }
 }
@@ -839,7 +917,8 @@ footer {
         margin: 0 0 15px 0;
     }
 
-    p, ul {
+    p,
+    ul {
         margin: 0 0 15px 0;
         color: $text;
         font-size: 0.9em;
@@ -860,7 +939,9 @@ footer {
 @media only screen and (max-width: 750px) {
 
     #experience-timeline {
-        &:before, &:after {
+
+        &:before,
+        &:after {
             left: 23px;
         }
 
@@ -932,7 +1013,8 @@ footer {
         height: 100%;
     }
 
-    #mobile-menu-open, #mobile-menu-close {
+    #mobile-menu-open,
+    #mobile-menu-close {
         display: block;
     }
 
@@ -968,7 +1050,9 @@ footer {
     }
 
     .education-block {
-        h3, span {
+
+        h3,
+        span {
             float: none;
         }
     }
