skill react added

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -783,6 +783,10 @@ footer {
         background-image: url('../images/git-logo.png');
     }
 
+    #skill_img8 {
+        background-image: url('../images/react-logo.png');
+    }
+
 }
 
 /*
